# agent

./: .env.example  .gitignore  CLAUDE.md  DEDUPLICATION_PLAN.md  DOCKER_SETUP.md  FINAL_PLANNER_INTEGRATION.md  FINAL_PLANNING_SIMPLIFICATION.md  PHASE1_IMPLEMENTATION_SUMMARY.md  PHASE1_REVISED_SUMMARY.md  PHASE2_IMPLEMENTATION_SUMMARY.md  PLANNER_IMPLEMENTATION.md  PLANNER_INTEGRATION_PLAN.md  PLANNER_STATUS.md  PLANNING_SIMPLIFICATION_ANALYSIS.md  PROJECT_GUIDELINES.md  README.md  SIMPLIFIED_INTEGRATION_SUMMARY.md  ULTIMATE_SIMPLIFICATION.md  meta_planner_planner_only.linear.patch  meta_planner_vs_current.linear.patch  planner_impl.patch  pyproject.toml  test_new_ontology.py  test_ollama_integration.py
agent/: .env.local  (+11 more)
agent/axum_agent/template/: Cargo.toml  Dockerfile  docker-compose.yml
agent/axum_agent/template/src/: main.rs
claude_plugin/: pyproject.toml  simple_claude_code.py
dabgent/dabgent_agent/: Cargo.toml  FINISHER_README.md
dabgent/dabgent_agent/docs/: MVP_SIMPLIFICATION.md  PLANNER_DESIGN.md  PLANNER_TASKS.md  README.md  README_MVP.md  meta_planner_tasks_MVP.md
dabgent/dabgent_agent/examples/: basic.rs  basic_openrouter.rs  basic_with_export.rs  compact_test.rs  databricks_explorer.rs  databricks_worker.rs  multi_agent.rs  pipeline.rs  planner_worker.rs  planning.rs  planning_event_driven.rs  planning_full.rs  test_simplified_planning.rs
dabgent/dabgent_agent/src/: agent.rs  compact_worker.rs  coordinator.rs  event.rs  event_router.rs  examples_utils.rs  execution.rs  handler.rs  lib.rs  llm.rs  main.rs  metadata.rs  orchestrator.rs  pipeline.rs  pipeline_config.rs  planner.rs  planner_events.rs  planning.rs  planning_mode.rs  planning_orchestrator.rs  planning_pipeline.rs  sandbox_seed.rs  thread.rs  tool.rs  utils.rs  validator.rs
dabgent/dabgent_agent/src/orchestrator/: mod.rs
dabgent/dabgent_agent/src/planner/: cli.rs  event_runner.rs  executor.rs  executor_mq.rs  handler.rs  llm.rs  mod.rs  mq.rs  runner.rs  types.rs
dabgent/dabgent_agent/src/planner/docs/: PLANNER_IMPLEMENTATION.md  meta_planner_design_MVP.md
dabgent/dabgent_agent/src/processor/: agent.rs  builder.rs  callbacks.rs  compaction.rs  databricks.rs  delegation.rs  finish.rs  link.rs  llm.rs  mod.rs  replay.rs  sandbox.rs  thread.rs  tool.rs  tools.rs  utils.rs  worker.rs  worker_callbacks.rs
dabgent/dabgent_agent/src/processor/delegation/: compaction.rs  databricks.rs  mod.rs
dabgent/dabgent_agent/src/toolbox/: basic.rs  databricks.rs  mod.rs  planning.rs
dabgent/dabgent_agent/src/toolbox/basic/: file_ops.rs  mod.rs  task_list.rs  validation.rs
dabgent/dabgent_agent/src/tools/: user_interaction.rs
dabgent/dabgent_agent/tests/: e2e_basic.rs  e2e_generation.rs  e2e_planner.rs  finisher_e2e.rs  llm_providers.rs  planner_follow_up_test.rs  planning_integration_test.rs  planning_pipeline_integration.rs  planning_tools.rs  task_list_validator.rs  test_planner_e2e.rs  test_planner_executor.rs  test_planner_handler.rs  test_planner_integration.rs  test_planner_types.rs
dabgent/dabgent_agent/tests/common/: mod.rs
dabgent/dabgent_mcp/: Cargo.toml
dabgent/dabgent_mcp/examples/: client.rs
dabgent/dabgent_mcp/src/: helpers.rs  lib.rs  main.rs  paths.rs  trajectory.rs  yell.rs
dabgent/dabgent_mcp/src/providers/: databricks.rs  deployment.rs  filesystem.rs  google_sheets.rs  io.rs  mod.rs  unified.rs
dabgent/dabgent_mcp/templates/: trpc_guidelines.md
dabgent/dabgent_mcp/tests/: initiate_project.rs  smoke_test.rs  trajectory_tracking.rs  validate_project.rs  yell.rs
dabgent/dabgent_mq/: Cargo.toml  README.md
dabgent/dabgent_mq/benches/: pubsub_bench.rs  pubsub_performance.rs  simple_pubsub.rs
dabgent/dabgent_mq/migrations/postgres/: 20250831183205_init.up.sql
dabgent/dabgent_mq/migrations/sqlite/: 20250831183235_init.up.sql
dabgent/dabgent_mq/src/: lib.rs  listener.rs  main.rs  models.rs  store.rs  test_utils.rs
dabgent/dabgent_mq/src/db/: mod.rs  postgres.rs  sqlite.rs
dabgent/dabgent_mq/tests/: postgres_store.rs  sqlite_store.rs
dabgent/dabgent_screenshot/: .dockerignore  Cargo.toml  README.md
dabgent/dabgent_screenshot/playwright/: batch-screenshot.spec.ts
dabgent/dabgent_screenshot/src/: lib.rs  main.rs  playwright.rs  screenshot.rs  types.rs
dabgent/dabgent_screenshot/tests/: integration.rs
dataapps/template/: DATABRICKS_DEPLOYMENT.md  app.yaml  package-lock.json  package.json  pyproject.toml  requirements.txt
dataapps/template/backend/: dev.py  main.py  pyproject.toml  react_admin_helpers.py  react_admin_wrapper.py  requirements.txt
dataapps/template/backend/routes/customers/: routes.py  schema.py
dataapps/template/frontend/reactadmin/: README.md  package-lock.json  package.json
dataapps/template/frontend/reactadmin/public/: manifest.json
dataapps/template/frontend/reactadmin/src/: App.tsx
edda/edda_cli/: Cargo.toml
edda/edda_cli/examples/: basic_agent.rs  databricks_explore.rs
edda/edda_cli/src/: app.rs  events.rs  ui.rs  widgets.rs
meta_agent/: CODE_REVIEW.md  Cargo.toml  HANDLER_TRAIT_IMPLEMENTATION.md  MVP_SIMPLIFICATION.md  README.md  meta_planner_design.md  meta_planner_tasks.md
meta_agent/src/: lib.rs  llm.rs  main.rs
meta_agent/src/agent/: actor.rs  demo.rs  mod.rs  toolset.rs  tree.rs  utils.rs
meta_agent/src/agent/optimizer/: mod.rs  prompts.rs  toolset.rs
meta_agent/src/events/: mod.rs
meta_agent/src/integrations/: Cargo.toml
meta_agent/src/integrations/examples/: databricks_example.rs  google_sheets.rs
meta_agent/src/integrations/src/: databricks.rs  google_sheets.rs  lib.rs
meta_agent/src/messaging/: mod.rs
meta_agent/src/planner/: REFACTORING_SUMMARY.md  cli.rs  example_usage.rs  handler.rs  llm.rs  llm_handler.rs  mod.rs  mq.rs  mq_integration.rs  types.rs
meta_agent/src/stacks/: mod.rs
meta_agent/src/stacks/nicegui/: Dockerfile.appbuild  mod.rs  tools.rs
meta_agent/src/stacks/python/: Dockerfile.appbuild  mod.rs
meta_agent/src/workspace/: dagger.rs  mock.rs  mod.rs
meta_agent/tests/: event_store_test.rs  mq_integration_test.rs  mq_subscribe_test.rs  planner_handler_test.rs
(+385 files in other folders)
