[workspace]
members = [".", "src/integrations"]

[package]
name = "meta_agent"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
dagger-sdk = "0.18.12"
eyre = "0.6.12"
integrations = { path = "src/integrations" }
rig-core = "0.15.1"
serde = "1.0.219"
serde_json = "1.0.140"
tempdir = "0.3.7"
tera = "1.20.0"
thiserror = "2.0.16"
tokio = { version = "1.46.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.0", features = ["v4"] }
