[package]
name = "dabgent_mcp"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "dabgent-mcp"
path = "src/main.rs"

[[example]]
name = "client"
path = "examples/client.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "process", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
eyre = "0.6"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2.0"
rmcp = { version = "0.8.0", features = ["server", "client", "transport-io", "transport-child-process"] }
schemars = "1"

# internal dependencies
dabgent_integrations = { path = "../dabgent_integrations" }
dabgent_agent = { path = "../dabgent_agent" }
