[package]
name = "dabgent_mcp"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "dabgent_mcp"
path = "src/main.rs"

[[example]]
name = "client"
path = "examples/client.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "process", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
eyre = "0.6"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2.0"
uuid = { version = "1", features = ["v4", "fast-rng"] }
rmcp = { version = "0.8", features = ["server", "client", "transport-io", "transport-child-process"] }
schemars = "1"
blake3 = "1.5"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.50", features = ["derive"] }
tar = "0.4"
flate2 = "1.0"
dialoguer = "0.11"
dirs = "5.0"

# internal dependencies
dabgent_integrations = { path = "../dabgent_integrations" }
dabgent_sandbox = { path = "../dabgent_sandbox" }
dabgent_templates = { path = "../dabgent_templates" }

[dev-dependencies]
rmcp-in-process-transport = "0.3.0"
tempfile = "3"
filetime = "0.2"

[build-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "process", "sync"] }
dabgent_sandbox = { path = "../dabgent_sandbox" }
dabgent_templates = { path = "../dabgent_templates" }
