[package]
name = "dabgent_mq"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8", features = ["postgres", "sqlite", "runtime-tokio", "tls-native-tls", "json", "chrono", "migrate"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
eyre = "0.6"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "v7", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3.20"
thiserror = "2.0.16"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

[[bench]]
name = "pubsub_bench"
harness = false
