[project]
name = "dataapps-template"
version = "0.1.0"
description = "FastAPI + React Admin data applications template"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "polars>=1.31.0",
    "pydantic>=2.11.3",
    "python-multipart>=0.0.6",
    "uvicorn[standard]>=0.34.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[dependency-groups]
dev = [
"pytest>=8.3.5",
"ruff>=0.11.5",
"pyright>=1.1.400",
"pytest-asyncio",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
